# cv_final_project

./: image_augmentation.cpp  image_augmentation_adapted.cpp  image_augmentation_babak.cpp  requirements.txt
Pirates-of-Chioggia-Features/: DL_feature.ipynb
Pirates-of-Chioggia-Features/Pirates-of-Chioggia-Features/: CMakeLists.txt  LICENSE  README.md
Pirates-of-Chioggia-Features/Pirates-of-Chioggia-Features/augmented_dataset/: features.csv
Pirates-of-Chioggia-Features/Pirates-of-Chioggia-Features/dataset/: features.csv
Pirates-of-Chioggia-Features/Pirates-of-Chioggia-Features/src/: csv_writer.cpp  csv_writer.h  dataset.cpp  dataset.h  features.cpp  features.h  main.cpp  preprocessing.cpp  preprocessing.h
